2014-03-22  Dirk Eddelbuettel  <edd@debian.org>

	* src/rquantlib.h: Moved from inst/include to avoid lower / uppercase
	clash; this header really is an internal definition header

	* src/rquantlib: New as<> and wrap converters for DateVector

	* inst/include/rquantlib_wrappers.h (Rcpp): Moved definition of as<>
	and wrap for Date and DateVector here to be read by plugin; added
	definitions for vector of dates

	* src/bermudan.cpp: Use as<> and wrap converters for Date and DateVector
	* src/bonds.cpp: Idem
	* src/calendars.cpp: Idem
	* src/daycounter.cpp: Idem
	* src/discount.cpp: Idem
	* src/hullwhite.cpp: Idem
	* src/utils.cpp: Idem
	* src/zero.cpp: Idem

	* src/utils.cpp: Retire old dateFromR converter


	* inst/include/RQuantLib.h: Also include 'wrapper' header for converters

	* R/inline.R (inlineCxxPlugin): Plugin reads header RQuantLib.h

2014-03-21  Dirk Eddelbuettel  <edd@debian.org>

	* src/utils.cpp: Added as<> and wrap conversion for QuantLib::Date

	* src/dates.cpp (advanceDate): Added simple test date function, also
	uses Rcpp Attributes as a first test case

	* inst/include/RQuantLib.h: Added and edited to allow inclusion of 
	actual rquantlib.h header via RcppExports

2014-03-20  Dirk Eddelbuettel  <edd@debian.org>

	* src/bonds.cpp (FittedBondCurve): Converted from deprecated
	FixedRateBondHelper to BondHelper with a FixedRateBond

2014-03-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/calendars.cpp: Applied patch by Danilo Dias da Silva to support
	more calendars by adding more than two dozen new identifiers

	* man/Calendars.Rd: Updated accordingly

2014-03-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.12

	* man/FittedBondCurve.Rd: Test for suggested package zoo before use

2014-03-08  Dirk Eddelbuettel  <edd@debian.org>

	* configure: Updated for Rcpp 0.11.0 and later
	* configure.in: Idem

	* src/Makevars.win: Updated for Rcpp 0.11.0 and later

	* R/inline.R (.onLoad): Set a default value of NULL for the QL libs