@@ -1,8 +1,7 @@
 ## RQuantLib -- R interface to the QuantLib libraries
 ##
-## Copyright (C) 2010 - 2011 Dirk Eddelbuettel and Khanh Nguyen
-##
-## $Id: calendars.R 293 2010-08-07 15:56:13Z edd $
+## Copyright (C) 2010 - 2011  Dirk Eddelbuettel and Khanh Nguyen
+## Copyright (C) 2012 - 2014  Dirk Eddelbuettel
 ##
 ## This file is part of the RQuantLib library for GNU R.
 ## It is made available under the terms of the GNU General Public
@@ -20,17 +19,17 @@
 ## Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 ## MA 02111-1307, USA
 
-dayCount <- function(startDates, endDates, dayCounters) {
-    val <- .Call('dayCount', startDates, endDates, dayCounters, PACKAGE="RQuantLib")
-    invisible(val)
-}
+#dayCount <- function(startDates, endDates, dayCounters) {
+#    val <- .Call('dayCount', startDates, endDates, dayCounters, PACKAGE="RQuantLib")
+#    invisible(val)
+#}
 
-yearFraction <- function(startDates, endDates, dayCounters) {
-    val <- .Call('yearFraction', startDates, endDates, dayCounters, PACKAGE="RQuantLib")
-    invisible(val)
-}
+#yearFraction <- function(startDates, endDates, dayCounters) {
+#    val <- .Call('yearFraction', startDates, endDates, dayCounters, PACKAGE="RQuantLib")
+#    invisible(val)
+#}
 
-setEvaluationDate <- function(evalDate) {
-    val <- .Call("setEvaluationDate", evalDate, PACKAGE="RQuantLib")
-    invisible(val)
-}
+#setEvaluationDate <- function(evalDate) {
+#    val <- .Call("setEvaluationDate", evalDate, PACKAGE="RQuantLib")
+#    invisible(val)
+#}
